# 3la-formal-check

./: CMakeLists.txt  README.md
app/: main.cc
data/: instr_seq_flex_small.json  instr_seq_relay_small.json
include/pffc/: ischecker.h  ischecker_flex_relay.h
src/: ischecker.cc  ischecker_flex.cc  ischecker_miter.cc  ischecker_relay.cc
